--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic");
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
 /*
 	Solid State by HTML5 UP
@@ -33,8 +34,65 @@ body {
 	line-height: 1;
 }
 
+.titles {
+	border-right: solid 3px rgba(163, 20, 219, 0.75);
+	white-space: nowrap;
+	overflow: hidden;    
+	margin: 1em;
+	font-family: 'Source Code Pro', monospace;  
+	color: #fff;
+	font-size: x-large;
+	text-shadow:
+		0 0 5px rgb(247, 0, 255),
+		0 0 10px rgb(247, 0, 255),
+		0 0 20px rgb(255, 0, 0),
+		0 0 40px rgb(243, 51, 237),
+		0 0 80px rgba(38,104,127,1),
+		0 0 90px rgba(38,104,127,1),
+		0 0 100px rgba(38,104,127,1),
+		0 0 140px rgba(38,104,127,1),
+		0 0 180px rgba(38,104,127,1);
+  }
+
+.containerTitle p span.typed-text {
+	color: #fff;
+	font-size: 1.2em;
+	text-shadow:
+		0 0 5px rgb(247, 0, 255),
+		0 0 10px rgb(247, 0, 255),
+		0 0 20px rgb(255, 0, 0),
+		0 0 40px rgb(243, 51, 237),
+		0 0 80px rgba(38,104,127,1),
+		0 0 90px rgba(38,104,127,1),
+		0 0 100px rgba(38,104,127,1),
+		0 0 140px rgba(38,104,127,1),
+		0 0 180px rgba(38,104,127,1);
+}
+.containerTitle p span.cursor {
+  display: inline-block;
+  background-color: #ccc;
+  margin-left: 0.1rem;
+  width: 3px;
+  animation: blink 1s infinite;
+}
+.containerTitle p span.cursor.typing {
+  animation: none;
+}
+@keyframes blink {
+  0%  { background-color: #ccc; }
+  49% { background-color: #ccc; }
+  50% { background-color: transparent; }
+  99% { background-color: transparent; }
+  100%  { background-color: #ccc; }
+}
+
+.symbol{
+	color: rgb(173, 15, 179);
+} 
+
 .fullstack {
 	color: #fff;
+	font-size: x-large;
 	text-shadow:
 		0 0 5px rgb(247, 0, 255),
 		0 0 10px rgb(247, 0, 255),
@@ -47,11 +105,12 @@ body {
 		0 0 180px rgba(38,104,127,1);
 }
 
-.es button{
-	background: rgb(196, 21, 212);
+.en button{
+	background: rgb(180, 30, 250);
+	width: 6em;
 }
 
-.es button:hover{
+.en button:hover{
 	background: rgb(4, 15, 1);
 }
 
@@ -122,10 +181,10 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #2e3141;
-		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
-		background-size: auto,
- cover;
+		background: linear-gradient(-45deg, #000000, #841c92, #000000, #b48ad6);
+		background-size: 400% 400%;
+		animation: gradient 15s ease infinite;
+		height: 100vh;
 		background-attachment: fixed,
  fixed;
 		background-position: center,
@@ -142,6 +201,263 @@ input, select, textarea {
 			-ms-transition: none !important;
 			transition: none !important;
 		}
+
+		@keyframes gradient {
+			0% {
+				background-position: 0% 50%;
+			}
+			50% {
+				background-position: 100% 50%;
+			}
+			100% {
+				background-position: 0% 50%;
+			}
+		}		
+
+/* CV BUTTON */
+
+		.btn {
+			border: none;
+			width: 15em;
+			display: block;
+			text-align: center;
+			cursor: pointer;
+			text-transform: uppercase;
+			outline: none;
+			overflow: hidden;
+			position: relative;
+			color: #fff;
+			font-weight: 700;
+			font-size: 15px;
+			background-color: #222;
+			padding: 15px 60px;
+			margin: 0 auto;
+			box-shadow: 0 5px 15px rgba(0,0,0,0.20);
+		  }
+		  
+		  .btn span {
+			position: relative; 
+			z-index: 1;
+		  }
+		  
+		  .btn:after {
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 0;
+			height: 490%;
+			width: 140%;
+			background: #c522e6;
+			-webkit-transition: all .5s ease-in-out;
+			transition: all .5s ease-in-out;
+			-webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
+			transform: translateX(-98%) translateY(-25%) rotate(45deg);
+		  }
+		  
+		  .btn:hover:after {
+			-webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+			transform: translateX(-9%) translateY(-25%) rotate(45deg);
+		  }
+
+	.LanCont{
+		display: flex;
+		justify-content: center;
+		/* justify-content: space-around; */
+	}
+
+	.carousel {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	  }  
+	  
+	  .carousel__item {
+		height: 80%;
+		width: 120%;
+		background: rgba(0, 0, 0, 0.342);
+		border-radius: 20%;
+		padding: 1em;
+		font-family: "Quicksand", sans-serif;
+		font-weight: bold;
+		font-size: 2em;
+		color: #ffffff;
+		display: none;
+		justify-content: center;
+	  }
+
+	  @media only screen and (max-width : 639px) {
+		.carousel__item {
+		  width: 110%;
+		  height: 80%;
+		}
+	  }
+
+	  @media only screen and (max-width : 1680px) {
+		.carousel__item {
+		  width: 110%;
+		  height: 80%;
+		}
+	  }
+	  
+	  .carousel__item--selected {
+		display: block;
+	  }
+	  
+	  .carousel__nav {
+		width: 100%;
+		padding: 20px 0;
+		/* position: absolute;
+		bottom: 0;
+		left: 0; */
+		text-align: center;
+	  }
+	  
+	  .carousel__button {
+		width: 15px;
+		height: 15px;
+		display: inline-block;
+		background: rgba(255, 255, 255, 0.2);
+		border-radius: 50%;
+		margin: 0 5px;
+		cursor: pointer;
+	  }
+	  
+	  .carousel__button--selected {
+		background: rgba(255, 255, 255, 0.5);
+	  }
+
+	  .skillstitcont{
+		  display: flex;
+		  justify-content: center;
+	  }
+
+	  .skillscont{
+		display: flex;
+		flex-direction: column;
+		/* position: relative;
+		right: 20%; */
+		text-align: center;
+	  }
+
+	  .skilltit{
+		color: #fff;
+		text-shadow:
+			0 0 5px rgb(247, 0, 255),
+			0 0 10px rgb(247, 0, 255),
+			0 0 20px rgb(255, 0, 0),
+			0 0 40px rgb(243, 51, 237),
+			0 0 10px rgba(38,104,127,1),
+			0 0 10px rgba(38,104,127,1),
+			0 0 10px rgba(38,104,127,1),
+			0 0 10px rgba(38,104,127,1),
+			0 0 10px rgba(38,104,127,1);
+	  }
+
+	  .ulskills{
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+	  }
+
+	  .liskill{
+		  font-size: 40%;
+		  text-decoration: none;
+	  }
+	  
+
+/* SKILLS CONTAINER 1 */
+	/* .amg-skills {
+		max-width: 960px;
+	  }
+	  .amg-badge {
+		padding: 20px 5%;
+	  }
+	  .amg-badge h3 {
+		margin: 0;
+		line-height: 50px;
+		text-align: center;
+		font-size: medium;
+		color: #FFFFFF;
+	  }
+	  
+	  @media only screen and (max-width : 639px) {
+		.amg-badge {
+		  width: 30%;
+		  padding: 20px 10%;
+		}
+	  } */
+
+/* Skills Conteiner 2*/
+	/* .container{
+		width: 80%;
+		margin: 0 auto;
+	  }
+	  @keyframes load{
+		from {
+		  width: 0%
+		}
+	  }
+	  @-webkit-keyframes load{
+		from {
+		  width: 0%
+		}
+	  }
+	  @-moz-keyframes load{
+		from {
+		  width: 0%
+		}
+	  }
+	  @-o-keyframes load{
+		from {
+		  width: 0%
+		}
+	  }
+	  
+	  .bar{
+		background-color: #EEE;
+		padding: 2px;
+		border-radius: 15px;
+		margin-bottom: 5px;
+		font-size: 1.5em;
+		color: rgb(0, 0, 0);
+		font-weight: bold;
+		text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+	  }
+	  .bar::before{
+		content:  attr(data-skill);
+		background-color: #cf22ee;
+		display: inline-block;
+		padding: 5px 0 5px 10px;
+		border-radius: inherit;
+		animation: load 10s 0s;
+		-webkit-animation: load 10s 0s;
+		-moz-animation: load 10s 0s;
+		-o-animation: load 10s 0s;
+	  }
+	  
+	  .bar.front::before{
+		background-color: #d81cf1;
+	  }
+	  .bar.back::before{
+		background-color: #b021db;
+	  }
+	  
+	  .bar.learning::before{
+		width: calc(20% - 10px);
+	  }
+	  .bar.basic::before{
+		width: calc(40% - 10px);
+	  }
+	  .bar.intermediate::before{
+		width: calc(60% - 10px);
+	  }
+	  .bar.advanced::before{
+		width: calc(80% - 10px);
+	  }
+	  .bar.expert::before{
+		width: calc(101% - 10px);
+	  } */
 
 /* Type */
 
@@ -3157,7 +3473,7 @@ input, select, textarea {
 					-ms-transition: background-color 0.2s ease-in-out;
 					transition: background-color 0.2s ease-in-out;
 					border-radius: 5px;
-					box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.125);
+					box-shadow: inset 0 0 0 2px rgb(180, 30, 250);
 					padding: 0 1.35em;
 				}
 
@@ -3709,6 +4025,7 @@ input, select, textarea {
 			padding: 3em 0 1em 0 ;
 			margin: 0 auto;
 			width: 55em;
+			margin-bottom: 8em;
 		}
 
 		.wrapper.spotlight {
